force-app/main/default/objects/Process_Settings__c/fields/Account_Allowed_Profiles_To_Delete__c.field-meta.xml
<CustomField>
    <fullName>Account_Allowed_Profiles_To_Delete__c</fullName>
    <description>Profiles able to delete accounts in any criteria.</description>
    <inlineHelpText>Profiles able to delete accounts in any criteria.</inlineHelpText>
    <label>Account: Allowed Profiles To Delete</label>
    <type>TextArea</type>
</CustomField>