force-app/main/default/objects/Process_Settings__c/fields/Account_Allowed_Profiles_To_Merge__c.field-meta.xml
<CustomField>
    <fullName>Account_Allowed_Profiles_To_Merge__c</fullName>
    <description>Profiles which are allowed to merge accounts in different regions.</description>
    <inlineHelpText>Profiles which are allowed to merge accounts in different regions.</inlineHelpText>
    <label>Account: Allowed Profiles To Merge</label>
    <type>TextArea</type>
</CustomField>