force-app/main/default/objects/Process_Settings__c/fields/Consider_Cogs_In_Next_Year_Budget__c.field-meta.xml
<CustomField>
    <fullName>Consider_Cogs_In_Next_Year_Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is the setting to consider Cogs prediction while calculating next year COGS Budget.</description>
    <label>Consider Cogs In Next Year Budget</label>
    <type>Checkbox</type>
</CustomField>