force-app/main/default/objects/Process_Settings__c/fields/Restricted_Profiles_For_Contract__c.field-meta.xml
<CustomField>
    <fullName>Restricted_Profiles_For_Contract__c</fullName>
    <description>Restricted Profiles for users which cannot be Owner of Contracts</description>
    <label>Restricted Profiles For Contract</label>
    <type>TextArea</type>
</CustomField>